--- a/src/index.html
+++ b/src/index.html
@@ -10,22 +10,17 @@
 </head>
 <body>
     <div class="container">
-        <button class="controls prev"></button>
         <div class="items-slider">
-            <div class="slide">
+            <button class="items-slider__controls items-slider__controls_prev"></button>
+            <div class="items-slider__content">
+                //= components/item/item.html
+                //= components/item/item.html
+                //= components/item/item.html
                 //= components/item/item.html
             </div>
-            <div class="slide">
-                //= components/item/item.html
-            </div>
-            <div class="slide">
-                //= components/item/item.html
-            </div>
-            <div class="slide">
-                //= components/item/item.html
-            </div>
+            <button class="items-slider__controls items-slider__controls_next"></button>
+            <div class="items-slider__dots"></div>
         </div>
-        <button class="controls next"></button>
     </div>
 </body>
 <script src="js/main.js" type="application/javascript"></script>
